# QHexEdit

./: CMakeLists.txt  Readme.md  readme.md
example/: main.cpp  mainwindow.cpp
src/: qhexedit.cpp  qhexedit.h
